# litho-book

./: .gitignore  .litho-book.toml  Cargo.toml  README.md  README_zh.md
.kwaipilot/preview/: start-command.sh
docs/: 1、项目概述.md  2、架构概览.md  3、工作流程.md  5、边界调用.md  __Litho_Summary_Brief__.md  __Litho_Summary_Detail__.md
docs/4、深入探索/: HTTP服务域.md  命令行解析域.md  文件系统域.md  文档数据域.md  用户交互域.md  系统支撑域.md  错误处理域.md
i18n/: en.json  zh.json
litho.docs/: 1、项目概述.md  2、架构概览.md  3、工作流程.md  __Litho_Summary_Brief__.md  __Litho_Summary_Detail__.md
litho.docs/4、深入探索/: HTTP服务域.md  命令行接口域.md  命令行解析域.md  文件系统域.md  服务器域.md  通用错误域.md  错误处理域.md
src/: cli.rs  error.rs  filesystem.rs  main.rs  server.rs
templates/: index.html  index.html.tpl
test-docs/: README.md  api.md  architecture.md  mermaid-demo.md
test-docs/guides/: installation.md  usage.md
