[package]
name = "litho-book"
version = "0.2.3"
edition = "2024"

[dependencies]
# CLI框架
clap = { version = "4.5", features = ["derive"] }

# Web服务框架
axum = "0.8.4"
tokio = { version = "1.47", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }

# Markdown处理
pulldown-cmark = "0.13"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 文件系统
walkdir = "2.5"

# 日志
tracing = "0.1"
tracing-subscriber = "0.3"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# Unix系统调用 (用于权限检查)
[target.'cfg(unix)'.dependencies]
libc = "0.2"